<resources>
    <string name="app_name">CinfySystems</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Change profile pic</string>
    <string name="menu_slideshow">Change password</string>
    <string name="menu_tools">Logout</string>
    <string name="menu_share">About us</string>
    <string name="menu_send">contact</string>
</resources>
