<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cinfysystems.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profilepic"
        android:name="com.example.cinfysystems.ui.profilepic.ProfilepicFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profilepic" />

    <fragment
        android:id="@+id/nav_changepass"
        android:name="com.example.cinfysystems.ui.changepassword.ChangepasswordFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_changepassword" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.cinfysystems.ui.logout.LogoutFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.cinfysystems.ui.aboutus.AboutusFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.cinfysystems.ui.contact.ContactFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_contact" />
</navigation>